# tmplpython

./: .coveragerc  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.md  tox.ini
.github/: pull_request_template.md
.github/workflows/: docker.yml  lint.yml  test.yml
tests/: test_main.py
tmplpython/: main.py
