[tool.poetry]
name = "tmplpython"
version = "0.3.0"
description = "Project description."
authors = ["yawn <102347321+yawn77@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yawn77/tmplpython"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
packages = [{include = "tmplpython"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
mypy = "^1.6.1"
pytest = "^7.2.0"
tox = "^4.4.6"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
