[tool.poetry]
name = "tmplpython"
version = "0.4.0"
description = "Project description."
authors = ["yawn <102347321+yawn77@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yawn77/tmplpython"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
packages = [{ include = "tmplpython" }]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
coverage = "^7.5.0"
tox = "^4.15.0"
mypy = "^1.10.0"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.coverage.run]
source = ["tmplpython"]
branch = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
